--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
   -->
 
 <resources>
-    <string name="app_name">Real Estate on Mars</string>
+    <string name="app_name">API-FOOTBALL</string>
     <string name="show_all">Show all</string>
     <string name="show_rent">Rent</string>
     <string name="show_buy">Buy</string>
@@ -25,4 +25,5 @@
     <string name="display_type">For %s</string>
     <string name="display_price_monthly_rental">$%,.0f/month</string>
     <string name="display_price">$%,.0f</string>
+    <string name="refresh">Refresh</string>
 </resources>
